--- a/Finance.Bot/Finance.Bot.Web.csproj
+++ b/Finance.Bot/Finance.Bot.Web.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Telegram.Bot" Version="16.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Finance.Bot.Business\Finance.Bot.Business.csproj" />
+  </ItemGroup>
+
 </Project>
